# dioxus-hd

./: .gitignore  Cargo.toml  hotdog.db
src/: backend.rs  main.rs
src/components/: favorites.rs  nav.rs  view.rs
